knotoperator/deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knotoperator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: knotoperator
  template:
    metadata:
      labels:
        name: knotoperator
      annotations:
        prometheus.io/scrape: 'true'
        #prometheus.io/port: '8383'
    spec:
      serviceAccountName: knotoperator
      containers:
        - name: knotoperator
          image: gcr.io/fair-theater-238820/knotoperator
          command:
          - knotoperator
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 250m  #INSERT_CPU_NEEDED_HERE
              memory: 800Mi #INSERT_MEM_NEEDED_HERE
            requests:
              cpu: 25m  #INSERT_CPU_NEEDED_HERE
              memory: 80Mi #INSERT_MEM_NEEDED_HERE
