knotoperator/deploy/XXingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: knotfree-ingress
  namespace: knotspace
spec:
  rules:
  - host: knotfree.05548fc2-4953-4209-8299-1241cab85e16.lb.civo.com
    http:
      paths:
      - backend:
          service:
            name: knotfreeaide
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - knotfree.05548fc2-4953-4209-8299-1241cab85e16.lb.civo.com
    secretName: knotfree
