knotoperator/deploy/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-scheme
  namespace: knotspace
spec:
  redirectScheme:
    scheme: https
    port: "443"


---

# - --entrypoints.web.http.redirections.entryPoint.to=:443 was added to args in traefik deployment


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure

    traefik.ingress.kubernetes.io/router.tls: "true"

    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    # traefik.ingress.kubernetes.io/app-root: /index.html

    # traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    # traefik.ingress.kubernetes.io/redirect-entry-point: https

    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    #traefik.ingress.kubernetes.io/router.entrypoints: websecure

    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: knotspace-https-redirect-scheme@kubernetescrd
    #traefik.ingress.kubernetes.io/router.middlewares: dev-https-redirect-scheme@kubernetescrd


  name: knotfree-ingress
  namespace: knotspace
spec:
  rules:
  - host: knotfree.net
    http:
      paths:
      - backend:
          service:
            name: knotfreeaide
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "knotfree.net" # demo.0d652485-6bb6-465f-b3b3-eb12485d9aee.lb.civo.com
    secretName: knotfree 

# --- 

# # Redirect to https - doesn't work? 
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: test-redirectscheme
#   namespace: knotspace
# spec:
#   redirectScheme:
#     permanent: true
